--- a/index.html
+++ b/index.html
@@ -298,13 +298,13 @@
         <div class="container mt-4">
             <div class="col-6">
                 <div class="menu d-flex jcsb">
-                    <a href="#" class="menu-btn active">
+                    <a href="#" onclick="return false;" class="menu-btn active" id="Trainer">
                         Тренеры
                     </a>
-                    <a href="#" class="menu-btn">
+                    <a href="#" onclick="return false;" class="menu-btn" id="Obor">
                         Оборудование
                     </a>
-                    <a href="#" class="menu-btn">
+                    <a href="#" onclick="return false;" class="menu-btn" id="Reviews">
                         Отзывы
                     </a>
                 </div>
@@ -312,37 +312,45 @@
         </div>
 
         <div class="container mt-4 d-flex jcsb">
-            <div class="text-card">
-                Занятия на платформе проводят профессиональные тренеры, спортcмены, мастера спорта. Очень важно доверять
-                тренеру, прислушиваться к нему, чтобы тренировка была эффективной
-                и безопасной.
-            </div>
-            <div class="course-card d-flex flex-col align-cent">
-                <div class="img-trainer iren"></div>
-                <span href="#" class="title card-title">
+            <div class="block-1 d-flex jcsb">
+                <div class="text-card">
+                    Занятия на платформе проводят профессиональные тренеры, спортcмены, мастера спорта. Очень важно доверять
+                    тренеру, прислушиваться к нему, чтобы тренировка была эффективной
+                    и безопасной.
+                </div>
+                <div class="course-card d-flex flex-col align-cent">
+                    <div class="img-trainer iren"></div>
+                    <span href="#" class="title card-title">
                     Ирина Усольцева
                 </span>
-                <span href="#" class="card-desc">
+                    <span href="#" class="card-desc">
                     Мастер спорта по гимнастике
                 </span>
-            </div>
-            <div class="course-card d-flex flex-col align-cent">
-                <div class="img-trainer elen"></div>
-                <span href="#" class="title card-title">
+                </div>
+                <div class="course-card d-flex flex-col align-cent">
+                    <div class="img-trainer elen"></div>
+                    <span href="#" class="title card-title">
                     Ирина Усольцева
                 </span>
-                <span href="#" class="card-desc">
+                    <span href="#" class="card-desc">
                     Мастер спорта по гимнастике
                 </span>
-            </div>
-            <div class="course-card d-flex flex-col align-cent">
-                <div class="img-trainer alen"></div>
-                <span href="#" class="title card-title">
+                </div>
+                <div class="course-card d-flex flex-col align-cent">
+                    <div class="img-trainer alen"></div>
+                    <span href="#" class="title card-title">
                     Ирина Усольцева
                 </span>
-                <span href="#" class="card-desc">
+                    <span href="#" class="card-desc">
                     Мастер спорта по гимнастике
                 </span>
+                </div>
+            </div>
+            <div class="block-2 d-flex jcsb none">
+                <h1>РОПОВТОПАТ</h1>
+            </div>
+            <div class="block-3 d-flex jcsb none">
+                <h1>gfgfdsgdsf)))</h1>
             </div>
         </div>
 
@@ -506,6 +514,8 @@
         </div>
     </div>
 </footer>
+
+<script src="./main.js"></script>
 
 </body>
 </html>
